@@ -45,7 +45,7 @@
 		<!-- plugin dependencies -->
 		<velocity-version>1.7</velocity-version>
 		<jaxb-api-version>2.4.0-b180830.0359</jaxb-api-version>
-		<xstream-version>1.4.18</xstream-version>
+		<xstream-version>1.4.19</xstream-version>
 		<ddlutils-version>1.0</ddlutils-version>
 		<slf4j-version>1.7.30</slf4j-version>
 		<!-- build settings -->
@@ -96,7 +96,7 @@
 				<jdk>17</jdk>
 			</activation>
 			<properties>
-				<jvm-flags>--add-modules=ALL-SYSTEM</jvm-flags>
+				<jvm-flags>--add-modules=ALL-SYSTEM --add-opens=java.base/java.util=ALL-UNNAMED</jvm-flags>
 			</properties>
 		</profile>
 		<profile>
